# model_sf

./: Dockerfile  Kenga_Dual_Colab.ipynb  Kenga_Python_Colab.ipynb  LICENSE  README.md  docker-compose.yml  kenga_colab.json  pyproject.toml  requirements.txt  setup.py
config/: monitoring.yml
data/: train.txt
docs/: api.md  model.md
examples/: model_usage.py
models/: kenga-merges.txt  kenga-vocab.json
scripts/: train_model.py  visualize_metrics.py
src/: __init__.py  inference_server.py  main.py  main_dual.py  run_all.py  telegram_bot.py
src/autonomous/: learning.py
src/bot/: __init__.py  telegram.py  webhook_handler.py
src/cloud/: integrations.py  notifications.py  storage.py
src/common/: __init__.py  status.py
src/experiments/: manager.py
src/file_analysis/: analyzer.py
src/monitoring/: attention_viz.py  embedding_visualizer.py  gpu_profiler.py  gradient_analyzer.py  layer_profiler.py  memory_profiler.py  metrics.py  metrics_extended.py  mlflow_logger.py  neuron_analyzer.py  performance.py  receptive_field.py  sensitivity_analyzer.py  tensorboard_logger.py  visualization.py  wandb_logger.py  weight_visualizer.py
src/network/: p2p.py
src/neural/: __init__.py  cortex.py  data.py  ensemble.py  memory.py  training.py  training_kenga_s.py
src/optimization/: hyperopt.py  ray_tuner.py
src/static/: style_caa.css
src/templates/: chat.html  graphs.html  index.html
src/utils/: __init__.py  crypto.py  tokenizer.py
src/visualization/: advanced.py
tests/: test_cortex.py  test_kenga_components.py  test_kenga_model.py  test_web.py
(+17 files in other folders)
