[tool.poetry]
name = "kengapy"
version = "0.1.0"
description = "Python based AI assistant with web and telegram interfaces"
authors = ["Kenga Team <team@kengarust.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://kengarust.dev"
repository = "https://github.com/kengarust/kengapy"
documentation = "https://docs.kengarust.dev"
keywords = ["example", "python", "project"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
python-telegram-bot = "^20.6"
torch = "^2.1.1"
aiohttp = "^3.9.1"
asyncio = "^3.4.3"
websockets = "^12.0"
beautifulsoup4 = "^4.12.2"
python-multipart = "^0.0.6"
uvicorn = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 